<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="0dp"
    tools:context=".CantorActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="0dp">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="15dp"
            android:text="@string/titulo_app"
            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputNomeMusica"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idtextInputNomeCantor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome_banda_cantor_grupo"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textLabelGeneroMusical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:text="@string/origem"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputNomeMusica" />

        <RadioGroup
            android:id="@+id/idRadioGroupOrigem"
            android:layout_width="0dp"
            android:layout_height="88dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textLabelCheckBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLabelGeneroMusical">

            <RadioButton
                android:id="@+id/idRadioButtonNacional"
                android:layout_width="151dp"
                android:layout_height="48dp"
                android:text="@string/nacional"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/idRadioButtonInternacional"
                android:layout_width="151dp"
                android:layout_height="48dp"
                android:text="@string/internacional"
                android:textColor="@color/black" />

        </RadioGroup>

        <TextView
            android:id="@+id/textLabelCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:text="@string/genero_musical"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idRadioGroupOrigem" />

        <CheckBox
            android:id="@+id/idCheckBoxMpb"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:text="@string/mpb"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLabelCheckBox" />

        <CheckBox
            android:id="@+id/idCheckBoxRock"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/rock"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idCheckBoxMpb" />

        <CheckBox
            android:id="@+id/idCheckBoxSamba"
            android:layout_width="145dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:text="@string/samba"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idCheckBoxRock" />

        <TextView
            android:id="@+id/idTextLabelConjuncaoMusical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:text="@string/conjuncao_musical"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idCheckBoxSamba" />

        <Spinner
            android:id="@+id/idSpinnerConjuncaoMusical"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:background="@color/colorPrimary"
            android:popupBackground="@color/colorPrimary"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idTextLabelConjuncaoMusical" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="salvar"
            android:text="@string/salvar"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idSpinnerConjuncaoMusical" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/colorPrimary"
            android:onClick="limparCampos"
            android:text="@string/limpar"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/idSpinnerConjuncaoMusical" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

